--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -26,7 +26,7 @@
   </div>
 </div>
 </ion-content>
-<app-footer [currentRoute]="'/home'"></app-footer>
+<app-footer [currentRoute]="'/home'" [foo_lang]="foo_lang"></app-footer>
 
 
   
