--- a/src/app/get-food-nearest-donors-two-duplicate/get-food-nearest-donors-two-duplicate.page.html
+++ b/src/app/get-food-nearest-donors-two-duplicate/get-food-nearest-donors-two-duplicate.page.html
@@ -1,17 +1,6 @@
 
 <app-captcha></app-captcha>
 <ion-content>
-
-  <!-- <div class="ion-padding" style="margin-left: 20px; margin-top: -15px;">
-    <div class="map-icon">
-      <img src="assets/images/location_black.svg">
-    </div>
-    <div class="map_desc">      
-      <div class="regular size_12">
-        {{model.colony_name}}
-      </div> 
-    </div>
-  </div> -->
   <div class="custom_map_design">
   <div style="margin-left: 20px;">
     <div class="map-icon">
@@ -23,7 +12,7 @@
       </div> 
     </div>
   </div>
-  <div class="ion-padding res_ion_padding">
+  <div [class.hidden]="!mapLoaded" class="ion-padding res_ion_padding">
     <div class="btn-group" style="margin-top: -12px;">
       <button class="grey regular btn4" id="btn_drive_dup">
         <div class="donor_icon" (click)="calculate_route('DRIVING', 2)">
@@ -57,9 +46,10 @@
       
     </div>
   </div>
+  <center [class.hidden]="mapLoaded" class="current_location_spinner_position" id="add_location_spinner"><ion-spinner class="current_location_sppiner"></ion-spinner></center>
   <div #map id="map"></div>
-  <div class="ion-padding theme_width theme_width_new">
-    <div class="" style="margin-bottom: 10px;" >
+  <div [class.hidden]="!mapLoaded" class="ion-padding theme_width theme_width_new">
+    <div  style="margin-bottom: 10px;" >
       <ion-row>
       <ion-col size="6">
         <p class="regular medium size_14 green line-height-0">{{time_c}} <span class="grey size_14">({{distance_c}})</span></p>
@@ -68,34 +58,16 @@
         <a class="size_14 medium direction" style="float: right;" (click)="openMap()"><ion-icon name="navigate-outline"></ion-icon> {{model.key_text10}}</a>
       </ion-col>
       </ion-row>
-      
-       
     </div>  
-    <ul class="size_14 medium">
+    <ul [class.hidden]="!mapLoaded" class="size_14 medium">
       <li class="li_new">{{model.key_text12}} {{model.food_type  | foodType}} {{model.key_text13}} {{model.key_text14}} {{model.total_food_for}} {{model.key_text15}}</li>
       <li style="padding-right: 100px;">{{model.key_text1}} - {{model.username}}</li>      
        <a class="size_14 medium call" (click)="call()">{{model.key_text11}}</a> 
-	   
     </ul>
-    <!-- <div class="grey_buttons">  
-      <ion-row>
-        <ion-col size="6">
-            <button class="app_btn custom_reject_btn new_btn_css" (click)="pickup_status(0)">{{model.key_text2}}</button>
-         
-        </ion-col>
-        <ion-col size="6">
-            <button class="app_btn custom_accept_btn new_btn_css" (click)="pickup_status(1)">{{model.key_text3}}</button>
-         
-        </ion-col>
-      </ion-row>
-    </div> -->
-
   </div>
 </div>
- 
-  
   </ion-content>
-  <ion-footer style="padding-top: 0px!important;">
+  <ion-footer [class.hidden]="!mapLoaded" style="padding-top: 0px!important;">
     <div class="medium size_16">
       <ion-row>
         <ion-col size="6">
@@ -106,32 +78,8 @@
         </ion-col>
       </ion-row>
     </div>
-    <!-- <div class="app_button">
-      <a routerLink="/get-food-nearest-donors-two/{{model.add_id}}/{{model.r_lat}}/{{model.r_lon}}/{{model.r_id}}/{{model.mode}}/{{model.d_food_type}}/{{model.getFood_id}}">
-        <button class="app_btn">{{model.key_text1}}</button>
-      </a>
-    </div> -->
-
   </ion-footer> 
-  <!-- <ion-footer>    
-    <ion-toolbar>    
-        <ion-segment value="home" color="transparent">
-      <ion-segment-button value="home" [routerLink]="['/home']">
-        <img src="assets/images/red_footer_home.svg">
-        <ion-label class="size_12 medium" color="tertiary">{{model.key_text4}}</ion-label>    
-      </ion-segment-button>
-      <ion-segment-button value="activity" [routerLink]="['/activity-normal']">
-        <img src="assets/images/grey_footer_activity.svg">
-        <ion-label class="size_12 medium">{{model.key_text5}}</ion-label>    
-      </ion-segment-button>
-      <ion-segment-button value="volunteer" *ngIf="model.is_volunteer== 1 " [routerLink]="['/volunteer-detail']">
-       
-        <img src="assets/images/grey_footer_volunteer.svg">
-        <ion-label class="size_12 medium">{{model.key_text6}}</ion-label>    
-      </ion-segment-button>
-    </ion-segment>    
-    </ion-toolbar>
-  </ion-footer>  -->
+  
 
 
  
