--- a/src/app/get-food-nearest-donors-two/get-food-nearest-donors-two.page.html
+++ b/src/app/get-food-nearest-donors-two/get-food-nearest-donors-two.page.html
@@ -1,21 +1,3 @@
-<!-- <ion-header class="ion-no-border ion-padding">
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-menu-button>
-        <img src="assets/images/icon_menu.svg">
-      </ion-menu-button>
-    </ion-buttons>
-  
-    <ion-buttons slot="end" (click)="openModalNotification()">
-      <span *ngIf="notification.length>0" style="position: absolute;height: 10px;width: 10px;background-color: #000;border-radius: 50%;color: #fff;
-        top: -3px;
-        right: 3px;
-        text-align: center;"></span>      
-        <img src="assets/images/icon_notification.svg">
-    </ion-buttons>
-  </ion-toolbar>
-</ion-header> -->
-<center style="position: absolute;display: none;z-index:999;margin-left:45%;" class="current_location_spinner_position" id="map_location_spinner"><ion-spinner class="current_location_sppiner"></ion-spinner></center>
 <app-captcha></app-captcha>
 <ion-content>
   <div class="custom_map_design">
@@ -31,10 +13,6 @@
       </div> 
     </div>
   </div>
-  
-  <!-- <div class="map volunteer_location">    
-    <img src="assets/images/map_volunteer.svg">
-  </div>  -->
   <div class="ion-padding" style="margin-left: 20px;padding: 5px !important;">
     <div class="map-icon">
       <ion-icon name="warning-outline" style="font-size: 14px; margin-top: 10px;"></ion-icon>
@@ -45,16 +23,17 @@
       </div> 
     </div>
   </div>
+  <center [class.hidden]="mapLoaded" class="current_location_spinner_position" id="add_location_spinner"><ion-spinner class="current_location_sppiner"></ion-spinner></center>
   <div #map id="map"></div>
   <br>
-  <ion-row>
+  <ion-row [class.hidden]="!mapLoaded">
     <ion-col size="12">
       <a class="size_15 medium direction"  (click)="openMap()"><ion-icon name="navigate-outline"></ion-icon> {{model.key_text16}}</a> 
     </ion-col>
   </ion-row>
   
   <br>
-  <div class="ion-padding theme_width">  
+  <div [class.hidden]="!mapLoaded" class="ion-padding theme_width">  
     
     <ul class="size_15 medium">
       <li>{{model.food_type}} {{model.key_text13}} {{model.key_text14}} {{model.total_food_for}} {{model.key_text15}}</li>
@@ -72,7 +51,7 @@
  </div>
   
   </ion-content>
-  <ion-footer style="padding-top: 0px!important;">
+  <ion-footer [class.hidden]="!mapLoaded" style="padding-top: 0px!important;">
     <div class="medium size_16">
       <ion-row>
         <ion-col size="6">
