--- a/src/app/get-food-nearest-donors/get-food-nearest-donors.page.html
+++ b/src/app/get-food-nearest-donors/get-food-nearest-donors.page.html
@@ -1,20 +1,3 @@
-<!-- <ion-header class="ion-no-border ion-padding">
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-menu-button>
-        <img src="assets/images/icon_menu.svg">
-      </ion-menu-button>
-    </ion-buttons>
-  
-    <ion-buttons slot="end" (click)="openModalNotification()">
-      <span *ngIf="notification.length>0" style="position: absolute;height: 10px;width: 10px;background-color: #000;border-radius: 50%;color: #fff;
-        top: -3px;
-        right: 3px;
-        text-align: center;"></span>      
-        <img src="assets/images/icon_notification.svg">
-    </ion-buttons>
-  </ion-toolbar>
-</ion-header> -->
 <app-captcha></app-captcha>
 <ion-content>
   <div class="custom_map_design">
@@ -28,7 +11,7 @@
       </div> 
     </div>
   </div> 
-  <div class="ion-padding res_ion_padding">
+  <div [class.hidden]="!mapLoaded" class="ion-padding res_ion_padding">
     <div class="btn-group" style="margin-top: -12px;">
       <button class="grey regular btn4" id="btn_drive">
         <div class="donor_icon" (click)="calculate_route('DRIVING', 2)">
@@ -63,21 +46,18 @@
     </div>
   </div>
  
- <!--  <div class="map volunteer_location">    
-    <img src="assets/images/map_volunteer.svg">
-  </div> -->
+  <center [class.hidden]="mapLoaded" class="current_location_spinner_position" id="add_location_spinner"><ion-spinner class="current_location_sppiner"></ion-spinner></center>
   <div #map id="map"></div>
   
-  <div class="ion-padding res_custom_padding">
+  <div [class.hidden]="!mapLoaded" class="ion-padding res_custom_padding">
     <div class="" >
-      <p class="regular medium size_14 green">{{time_c}} <span class="grey size_14">({{distance_c}})</span></p>
+      <p class="regular medium size_14 green">{{time_c}} <span class="grey size_14" *ngIf="distance_c">({{distance_c}})</span></p>
     </div>
     <div class=""> 
         
       <div class="regular size_14 green">
         {{model.key_text6}} {{model.username_r}}, {{model.food_name}} {{model.key_text7}} {{model.number_of_person}} {{model.key_text8}} {{model.key_text9}} <span class="size_14 regular red">{{distance_c}}</span> {{model.key_text10}}.{{model.key_text11}} {{additional_msg_2}}.
-        <!-- {{model.donor_address.city}}, {{model.donor_address.state}} <br>
-        {{model.donor_address.postalCode}}, {{model.donor_address.country}} -->
+        
       </div>      
       
     </div>
@@ -86,7 +66,7 @@
   
   </ion-content>
   
-  <ion-footer style="padding-top: 0px!important;">
+  <ion-footer [class.hidden]="!mapLoaded" style="padding-top: 0px!important;">
     <div class="medium size_16">
       <ion-row>
         <ion-col size="6">
@@ -97,12 +77,6 @@
         </ion-col>
       </ion-row>
     </div>
-    <!-- <div class="app_button">
-      <a routerLink="/get-food-nearest-donors-two/{{model.add_id}}/{{model.r_lat}}/{{model.r_lon}}/{{model.r_id}}/{{model.mode}}/{{model.d_food_type}}/{{model.getFood_id}}">
-        <button class="app_btn">{{model.key_text1}}</button>
-      </a>
-    </div> -->
-
   </ion-footer> 
 
 
