Add back buttons

--- a/src/app/otp/otp.page.html
+++ b/src/app/otp/otp.page.html
@@ -1,6 +1,9 @@
 <ion-content>
   <div class="big_header">
     <div class="ion-padding">
+      <ion-buttons class="back_button" slot="end" >
+        <ion-back-button defaultHref="/"></ion-back-button>
+      </ion-buttons>
       <div class="title light poiret">
         {{model.key_text1}}
       </div>
