--- a/src/app/help/help.page.scss
+++ b/src/app/help/help.page.scss
@@ -8,3 +8,22 @@
 .current_location_spinner_position{
 	margin-top:250px;
 }
+.chatboard {
+	position: fixed;
+    bottom: 70px;
+    right: 20px;
+    width: 340px;
+    background: white;
+    border-radius: 10px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+    z-index: 1000;
+    display: flex;
+    flex-direction: column;
+    overflow: scroll;
+  }
+  ion-fab{
+    --background: #419B95 !important;
+  }
+  .video{
+    padding: 10px;
+  }
