--- a/src/app/modal/notification/notification.page.html
+++ b/src/app/modal/notification/notification.page.html
@@ -41,6 +41,7 @@
             {{ x.notification_message }}
             <ion-icon (click)="notification(x.id,i)" name="eye-outline"></ion-icon>
           </span>
+          <br><small>{{ x.created_at | date:'dd/MM/yyyy hh:mm:ss a' }}</small>
         </p>
         <p  *ngFor="let x of notifications_admin; index as i" style="padding:0px 10px; border-bottom:1px solid #ccc;color:#e8604c;" >
           <span *ngIf="x.message=='YOUR_DONATION_IS_EXPIRED'">
@@ -51,6 +52,7 @@
             {{ x.message }}
             <ion-icon (click)="notification_admin(x.id,i)" name="eye-outline"></ion-icon>
           </span>
+          <br><small>{{ x.created_at | date:'dd/MM/yyyy hh:mm:ss a' }}</small>
         </p>
         <p *ngIf="notifications.length == 0 && notifications_admin.length == 0" style="text-align: center;">
             {{ model.key_text11 }}
